--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <h1>My Own WebSite</h1>
     <hr>
     <h3>Just for Demo</h3>
+    <br>
+    <a href="login.html">Sign In</a>
   </body>
 </html>
