--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <h1>Please Login</h1>
 <hr>
-<form>
+<form action="welcome.html">
   <h3>
     Username <input type="text"><br>
     Password <input type="password"><br>
